--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "sentence-transformers>=5.1.0",
     "pandas>=2.0.0",
     "pillow>=10.0.0",
+    "flash-attn>=2.8.3",
 ]
 
 [tool.setuptools]
